2004-02-22  Mark Kettenis  <kettenis@gnu.org>

	* x86-64-linux-tdep.c: Tweak comment.
	(amd64_linux_supply_gregset): Renamed from
	x86_64_linux_supply_gresget.
	(amd64_linux_fill_gregset): Renamed from
	x86_64_linux_fill_gregset.
	(fetch_core_registers): Adjust for renamed functions.
	(amd64_core_fns): Renamed from x86_64_core_fns.
	(amd64_linux_sigtramp_start): Renamed from
	x86_64_linux_sigtramp_start.
	(amd64_linux_pc_in_sigtramp): Renamed from
	x86_64_linux_pc_in_sigtramp.  Adjust for renamed functions.
	(AMD64_LINUX_UCONTEXT_SIGCONTEXT_OFFSET): Renamed from
	X86_64_LINUX_UCONTEXT_SIGCONTEXT_OFFSET.
	(amd64_linux_sigcontext_addr): Renamed from
	x86_64_linux_sigcontext_addr.
	(amd64_linux_sc_reg_offset): Renamed from
	x86_64_linux_sc_reg_offset.
	(amd64_linux_init_abi): Renamed from x86_64_linux_init_abi.
	Adjust for renamed functions and variables.
	(_initialize_amd64_linux_tdep): Renamed from
	_initialize_x86_64_linux_tdep.  Adjust for renamed functions and
	variables.
	* x86-64-linux-tdep.h: Update copyright year.  Tweak comment.
	Adjust for renamed functions.

	* x86-64-linux-nat.c (amd64_linux_gregset64_reg_offset): Rename
	from x86_64_linux_gregset64_reg_offset.
	(amd64_linux_gregset32_reg_offset): Rename from
	x86_64_linux_gregset64_reg_offset.
	(amd64_linux_dr_get): Renamed from x86_64_linux_dr_get.
	(amd64_linux_dr_set): Renamed from x86_64_linux_dr_set.
	(amd64_linux_dr_set_control): Renamed from
	x86_64_linux_dr_set_control.  Adjust for renamed functions.
	(amd64_linux_dr_set_addr): Renamed from x86_64_linux_dr_set_addr.
	Adjust for renamed functions.
	(amd64_linux_dr_reset_addr): Renamed from
	x86_64_linux_dr_reset_addr. Adjust for renamed functions.
	(amd64_linux_dr_get_status): Renamed from
	x86_64_linux_dr_get_status.  Adjust for renamed functions.
	(_initialize_amd64_linux_nat): Renamed from
	_initialize_x86_64_linux_nat.  Adjust for renamed variables and
	functions.
	* config/i386/nm-x86-64linux.h: Update copyright year.