@@ -31,10 +31,6 @@
 
 #define GDB_MULTI_ARCH 1
 
-/* NOTE: cagney/2002-11-24: This is a guess.  */
-#define DEPRECATED_USE_GENERIC_DUMMY_FRAMES 0
-#define CALL_DUMMY_LOCATION ON_STACK
-#define DEPRECATED_PC_IN_CALL_DUMMY(pc, sp, frame_address) deprecated_pc_in_call_dummy_on_stack (pc, sp, frame_address)
 /* Hack, get around problem with including "arch-utils.h".  */
 struct frame_info;
 
